@@ -971,15 +971,26 @@ for the Java language.</li>
 
 </ul>
 <h3>ADL Parser</h3>
-<span style="font-style: italic; color: rgb(255, 0, 0);">to be continued</span>
-
-
-
-
-
-
-
 <ul>
+<li>
+A Java implementation of ADL parser targeting ADL 1.2
+</li>
+<li>
+Fully integrated with the Java Kernel
+</li>
+
+
+<li>
+limited post-parsing validation
+</li>
+
+
+
+
+
+
+
+</ul>
 
 
 
@@ -1095,6 +1106,10 @@ change 'charset' and 'language' from required to optional in the constructor of 
 
   <li><b>2005-08-18</b>
 fixed obsolete path separator in data structure package</li>
+
+
+  <li><b>2005-11-17</b>
+fixed TermBindingItem bug in ADL parser</li>
 
 
 
